--- a/kimi/python-v/index.html
+++ b/kimi/python-v/index.html
@@ -334,6 +334,9 @@
             box-shadow: 0 2px 8px rgba(0,0,0,0.08);
             transition: background 0.2s, color 0.2s;
             margin-top: 50px;
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
         }
         .pause-btn:hover {
             background: #ffe4b5;
