--- a/kimi/js-v/index.html
+++ b/kimi/js-v/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>中国象棋棋盘</title>
+    <title>中国象棋</title>
     <script src="static/marked.min.js"></script>
     <script src="static/chess.js"></script>
     <script src="static/ai.js"></script>
@@ -16,7 +16,9 @@
             align-items: flex-start;
             min-height: 100vh;
             margin: 0;
-            padding: 20px;
+			padding: 20px;
+			-webkit-text-size-adjust: 100%;
+			-webkit-tap-highlight-color: rgba(0,0,0,0);
         }
 
         /* 主题皮肤（可切换） */
@@ -137,14 +139,15 @@
         .bg-toolbar input[type="file"]{ display:none; }
 
         /* 外层包裹用于缩放占位，内部真实棋盘固定原始尺寸 */
-        .chessboard-wrapper {
-            width: 450px;
-            /* height: 490px; */
-            margin: 0 auto;
-            position: relative;
-            left: 10%;
-            transform: none;
-        }
+		.chessboard-wrapper {
+			width: 100%;
+			max-width: 450px;
+			margin: 0 auto;
+			position: relative;
+			left: 0;
+			transform: none;
+			height: 500px; /* will be updated by JS when scaled */
+		}
         .chessboard {
             width: 450px;
             height: 500px;
@@ -155,6 +158,7 @@
             border: 2px solid rgba(139, 69, 19, 0.5);
             border-radius: 16px;
             box-shadow: 0 12px 30px rgba(0,0,0,0.18), inset 0 2px 8px rgba(255,255,255,0.3);
+			transform-origin: top left;
         }
 
         /* 棋盘网格线 */
@@ -374,10 +378,24 @@
             height: 24px;
             display: none;
         }
+
+		/* Mobile-friendly tweaks */
+		.chessboard, .bg-toolbar button, .bg-toolbar select {
+			touch-action: manipulation;
+		}
+
+		@media (max-width: 600px) {
+			body { padding: 12px; }
+			.main-layout { gap: 12px; flex-direction: column; align-items: center; }
+			.bg-toolbar { left: 8px; top: 8px; gap: 6px; padding: 4px 8px; font-size: 12px; }
+			.bg-toolbar select, .bg-toolbar button { padding: 3px 6px; }
+			.board-title { font-size: 24px; margin-bottom: 12px; }
+			.game-status { font-size: 16px; }
+		}
     </style>
 </head>
 <body>
-    <!-- <div class="bg-toolbar">
+    <div class="bg-toolbar">
             <span>主题</span>
             <select id="bg-select">
                 <option value="guochao">国潮</option>
@@ -386,7 +404,7 @@
             </select>
             <button id="bg-upload-btn">上传图片</button>
             <input type="file" id="bg-file" accept="image/*">
-        </div> -->
+        </div>
     <div class="main-layout">
         <div class="chess-container">
             <!-- <div class="board-title">中国象棋</div> -->
@@ -495,7 +513,30 @@
             document.body.style.backgroundImage = 'url(' + lastUrl + ')';
             document.body.classList.add('theme-custom');
         }
-    })();
+
+	// Responsive scaling for the board
+	function resizeBoard(){
+		var wrapper = document.getElementById('chessboard-wrapper');
+		var board = document.getElementById('chessboard');
+		if (!wrapper || !board) return;
+		var parent = wrapper.parentElement;
+		var parentWidth = parent ? parent.clientWidth : window.innerWidth;
+		var viewportWidth = window.innerWidth;
+		var availableWidth = Math.min(parentWidth, viewportWidth - 24);
+		var baseWidth = 450; // chessboard design width
+		var scale = Math.min(1, availableWidth / baseWidth);
+		board.style.transform = 'scale(' + scale + ')';
+		wrapper.style.height = (500 * scale) + 'px'; // keep aspect ratio
+	}
+
+	window.addEventListener('resize', resizeBoard, { passive: true });
+	window.addEventListener('orientationchange', resizeBoard);
+	if (document.readyState === 'loading') {
+		document.addEventListener('DOMContentLoaded', resizeBoard);
+	} else {
+		resizeBoard();
+	}
+	})();
     </script>
 
 </body>
