--- a/chatgpt/static/index.html
+++ b/chatgpt/static/index.html
@@ -18,21 +18,12 @@
         <select id="humanSide">
           <option value="red">红</option>
           <option value="black">黑</option>
+          <option value="none">无（AI vs AI）</option>
         </select>
       </label>
       <button id="newGameBtn">新开局</button>
     </div>
-    <div>
-      <label>模拟次数: <input type="number" id="sims" value="100" min="10" step="10" /></label>
-      <label>设备: 
-        <select id="device">
-          <option value="cpu">CPU</option>
-          <option value="cuda">CUDA</option>
-        </select>
-      </label>
-      <label>模型路径: <input id="modelPath" size="28" placeholder="alphazero_xiangqi.pt" /></label>
-      <button id="applySettings">应用设置</button>
-    </div>
+    <div id="modeHint">选择“无（AI vs AI）”可观看 AI 对弈</div>
   </header>
 
   <main class="main">
