--- a/kimi/python-v/index.html
+++ b/kimi/python-v/index.html
@@ -267,6 +267,17 @@
             box-shadow: 0 0 0 3px orange inset, 0 4px 8px rgba(0,0,0,0.2);
         }
 
+        /* 移动原点标记 */
+        .move-origin {
+            position: absolute;
+            width: 12px;
+            height: 12px;
+            background-color: rgba(255, 165, 0, 0.6);
+            border-radius: 50%;
+            pointer-events: none;
+            z-index: 1;
+        }
+
         /* 棋盘标题 */
         .board-title {
             text-align: center;
