--- a/kimi/python-v/index.html
+++ b/kimi/python-v/index.html
@@ -363,6 +363,7 @@
                 <select id="mode-select" style="font-size:16px;padding:4px 12px;">
                     <option value="human-vs-ai">人机对弈</option>
                     <option value="ai-vs-ai">AI对弈</option>
+                    <option value="record-mode">棋谱录制</option>
                 </select>
             </div>
             <div class="chess-container">             
@@ -409,9 +410,31 @@
                         <span>楚河</span>
                         <span>汉界</span>
                     </div>
+                    <!-- X轴坐标 (0-8) -->
+                    <div class="coordinate coordinate-x" style="left: 25px;">0</div>
+                    <div class="coordinate coordinate-x" style="left: 75px;">1</div>
+                    <div class="coordinate coordinate-x" style="left: 125px;">2</div>
+                    <div class="coordinate coordinate-x" style="left: 175px;">3</div>
+                    <div class="coordinate coordinate-x" style="left: 225px;">4</div>
+                    <div class="coordinate coordinate-x" style="left: 275px;">5</div>
+                    <div class="coordinate coordinate-x" style="left: 325px;">6</div>
+                    <div class="coordinate coordinate-x" style="left: 375px;">7</div>
+                    <div class="coordinate coordinate-x" style="left: 425px;">8</div>
+                    
+                    <!-- Y轴坐标 (0-9) -->
+                    <div class="coordinate coordinate-y" style="top: 25px;">0</div>
+                    <div class="coordinate coordinate-y" style="top: 75px;">1</div>
+                    <div class="coordinate coordinate-y" style="top: 125px;">2</div>
+                    <div class="coordinate coordinate-y" style="top: 175px;">3</div>
+                    <div class="coordinate coordinate-y" style="top: 225px;">4</div>
+                    <div class="coordinate coordinate-y" style="top: 275px;">5</div>
+                    <div class="coordinate coordinate-y" style="top: 325px;">6</div>
+                    <div class="coordinate coordinate-y" style="top: 375px;">7</div>
+                    <div class="coordinate coordinate-y" style="top: 425px;">8</div>
+                    <div class="coordinate coordinate-y" style="top: 475px;">9</div>
                 </div>
-                <div id="game-status" class="game-status"></div>
                 <button id="pause-btn" class="pause-btn">暂停</button>
+                <div id="game-status" class="game-status"></div>
             </div>
             </div>
     </div>
