--- a/kimi/python-v/index.html
+++ b/kimi/python-v/index.html
@@ -366,6 +366,14 @@
                     <option value="ai-vs-ai">AI对弈</option>
                     <option value="record-mode">棋谱录制</option>
                 </select>
+                <!-- 添加选择执子方的选项 -->
+                <div id="side-selection" style="display: none; margin-top: 10px; margin-left: 10px; display: inline-block;">
+                    <label for="side-select" style="font-size:16px;color:#8b4513;font-weight:bold;">选择执子方：</label>
+                    <select id="side-select" style="font-size:16px;padding:4px 12px;">
+                        <option value="red">红方</option>
+                        <option value="black">黑方</option>
+                    </select>
+                </div>
             </div>
             <div class="chess-container">             
                 <div class="board-title">中国象棋</div>
