--- a/kimi/python-v/index.html
+++ b/kimi/python-v/index.html
@@ -359,6 +359,18 @@
                 <div id="pause-container" style="display: none; vertical-align: middle;">
                     <button id="pause-btn" class="control-btn">暂停</button>
                 </div>
+                <div id="custom-define-container" style="display:none;margin-left:10px;">
+                    <label for="custom-mode-select" style="font-size:16px;color:#8b4513;font-weight:bold;">操作模式：</label>
+                    <select id="custom-mode-select" style="font-size:16px;padding:4px 12px;">
+                        <option value="select-red">执子红</option>
+                        <option value="select-black">执子黑</option>
+                        <option value="delete">删棋</option>
+                        <option value="move">移子</option>
+                        <option value="hint-red">提示红</option>
+                        <option value="hint-black">提示黑</option>
+                    </select>
+                    <button id="custom-hint-btn" class="control-btn" style="display:none;margin-left:8px;">提示</button>
+                    </div>
             </div>
             <div class="chess-container">             
                 <!-- <div class="board-title">中国象棋</div> -->
