--- a/kimi/python-v/index.html
+++ b/kimi/python-v/index.html
@@ -359,6 +359,8 @@
                 <div id="pause-container" style="display: none; vertical-align: middle;">
                     <button id="pause-btn" class="control-btn">暂停</button>
                 </div>
+                <button id="move-piece-btn" class="control-btn" style="display:none;">移子</button>
+                <button id="retry-ai-btn" class="control-btn" style="display:none;">重试AI走棋</button>
                 <div id="custom-define-container" style="display:none;margin-left:10px;">
                     <label for="custom-mode-select" style="font-size:16px;color:#8b4513;font-weight:bold;">操作模式：</label>
                     <select id="custom-mode-select" style="font-size:16px;padding:4px 12px;">
@@ -437,7 +439,7 @@
                     <div class="coordinate coordinate-y" style="top: 425px;">8</div>
                     <div class="coordinate coordinate-y" style="top: 475px;">9</div>
                 </div>
-                <div id="game-status" class="game-status"></div>
+                <div id="game-status" class="game-status"></div>             
             </div>
             </div>
     </div>
