将移子改成悔棋

--- a/kimi/python-v/index.html
+++ b/kimi/python-v/index.html
@@ -359,7 +359,7 @@
                 <div id="pause-container" style="display: none; vertical-align: middle;">
                     <button id="pause-btn" class="control-btn">暂停</button>
                 </div>
-                <button id="move-piece-btn" class="control-btn" style="display:none;">移子</button>
+                <button id="undo-btn" class="control-btn" style="display:none;">悔棋</button>
                 <button id="retry-ai-btn" class="control-btn" style="display:none;">重试AI走棋</button>
                 <div id="custom-define-container" style="display:none;margin-left:10px;">
                     <label for="custom-mode-select" style="font-size:16px;color:#8b4513;font-weight:bold;">操作模式：</label>
